--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
   <!-- OWN STYLES -->
   <link rel="stylesheet" href="assets/css/styles.css">
 
+  <!-- Firebase -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/0.4.0/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/0.4.0/firebase-ui-auth.css" />
+
   <!-- GA SCRIPT -->
   <script>
     (function(i, s, o, g, r, a, m) {
@@ -72,8 +79,17 @@
     <div class="container text-xs-center">
       <div class="row">
         <div class="col-xs-12">
-          <h2 class="text-primary">Placeholder text. Project Init.</h2>
+          <h2 class="text-primary">Personal user content output.</h2>
+          <p id="outputTestnode"></p>
         </div>
+      </div>
+      <div class="row">
+        <h2 class="col-xs-12">Login status output:</h2>
+        <div id="quickstart-sign-in-status" class="col-xs-12"></div>
+        <div class="col-xs-12">
+          <button id="btn-sign-in" class="btn btn-info" data-sign-in-state="signed-out"></button>
+        </div>
+        <div id="quickstart-account-details" class="col-xs-12"></div>
       </div>
     </div>
   </section>
@@ -96,7 +112,7 @@
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
   <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script> -->
 
   <!-- Tether (for pop overs and tooltips) -->
   <script src="assets/js/tether.min.js"></script>
@@ -112,6 +128,29 @@
 
   <!-- APP SCRIPT -->
   <script src="assets/js/app.js"></script>
+
+  <!-- LOGIN MODAL -->
+  <div id="login-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="gridModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h5 class="modal-title" id="gridModalLabel">Choose a login provider:</h5>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid bd-example-row">
+            <!-- This container holds the Google Firebase default Sign in UI -->
+            <div id="firebaseui-auth-container" class="row">
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+    </div>
+
 </body>
 
 </html>
