start mergin project ot ReactFire

--- a/DELETE-WHEN-MERGED-TO-REACT-static-page.html
+++ b/DELETE-WHEN-MERGED-TO-REACT-static-page.html
@@ -74,9 +74,6 @@
     </nav>
   </header>
 
-  <!-- REACT COMPONENT -->
-  <main id="giftbox-container"></main>
-
   <!-- TEMP SECTION -->
   <section class="p-y-3 about bg-gray">
     <div class="container text-xs-center">
@@ -120,14 +117,8 @@
   <!-- Moment.js -->
   <script src="assets/js/moment.min.js"></script>
 
-  <!-- Login -->
-  <!-- <script src="assets/js/login.js"></script> -->
-
-  <!-- TRANSPILER -->
-  <!-- throw-in-the-towel -->
-  <script src="https://npmcdn.com/throw-in-the-towel@2"></script>
-  <!-- React App -->
-  <script type="text/babel" src="assets/js/app.js"></script>
+  <!-- APP SCRIPT -->
+  <script src="assets/js/app.js"></script>
 
   <!-- LOGIN MODAL -->
   <div id="login-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="gridModalLabel" aria-hidden="true">
