--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Giftbox</title>
-
   <!-- ROBOTO FONT -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 
@@ -17,11 +16,6 @@
 
   <!-- Firebase -->
   <!-- TODO: add later -->
-
-  <!-- Firebase auth ui -->
-  <!-- TODO: enable auth login later -->
-  <!-- <script src="https://www.gstatic.com/firebasejs/ui/0.4.0/firebase-ui-auth.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/0.4.0/firebase-ui-auth.css" /> -->
 
   <!-- GA SCRIPT -->
   <script>
@@ -43,27 +37,8 @@
 </head>
 
 <body>
-  <!-- MAIN NAV -->
-  <header>
-    <nav class="navbar navbar-dark bg-warning p-y-1">
-      <ul class="nav navbar-nav row text-xs-right">
-        <li class="nav-item col-xs-4 col-sm-1 logo-order">
-          <a class="navbar-brand" href="#">
-            <img src="favicon.ico" alt="Logo" width="200%">
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link btn btn-primary" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <button id="btn-sign-in" class="btn btn-info">Sign In</button>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- MAIN COMPONENT -->
-  <main id="app"></main>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
 
   <!-- FOOTER -->
   <footer class="p-y-3 bg-warning">
@@ -71,16 +46,11 @@
       <div class="row">
         <div class="col-xs-12">
           <h5>Copyright &copy; 2013-2017 Georgi Yanev &amp; Sofia Lindberg</h4>
-            <h5><i class="fa fa-code" aria-hidden="true"></i> with <i class="fa fa-heart" aria-hidden="true"></i> for little Anton.</h4>
+              <h5><i class="fa fa-code" aria-hidden="true"></i> with <i class="fa fa-heart" aria-hidden="true"></i> for little Anton.</h4>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
-    <!-- END FOOTER -->
-
-    <!-- Bootstrap JS -->
-    <!-- TODO: enable if needed -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script> -->
-</body>
-
+      </footer>
+      <!-- END FOOTER -->
+  </body>
 </html>
